<resources>
    <string name="app_name">iPet</string>
    <string name="title_activity_teste">Teste</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="metodosPagamento">Agora escolha um banco para continuar</string>
    <string name="valorDoacao">Informe o valor da doação</string>
    <string name="nomeBanco">Caixa Econômica Federal</string>
    <string name="descLogoPix">logo pix</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="texto_toolbar">texto</string>
    <string name="textoParagrafo">Ao utilizar uma foto, você poderá aumentar as chances de receber doações em um caso.</string>
    <string name="texto_banco">Banco</string>
    <string name="texto_num_conta">Conta</string>
    <string name="texto_num_agencia">Agencia</string>
    <string name="texto_check_box_pix">Habilitar pix</string>
    <string name="chave_pix">Chave Pix</string>
    <string name="texto_dados_bancarios">Dados Bancários</string>
    <string name="texto_confirmar_doacao">Confirmar Doações</string>
    <string name="texto_sair">Sair</string>
    <string name="pular_etapa_e_concluir">Pular etapa e concluir</string>
    <string name="concluir">Concluir</string>
    <string name="pular_etapa">Pular etapa</string>
    <string name="estado">Estado</string>
    <string name="munic_pio">Município</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cnpj">CNPJ</string>
    <string name="cnpj_cpf">CNPJ/CPF</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="nome_da_ong">Nome da ONG</string>
    <string name="filtrar">Filtrar</string>
    <string name="m_ximo">Máximo</string>
    <string name="localiza_o">Localização</string>
    <string name="minimo">Minimo</string>
    <string name="caixa_economica_federal">Caixa Econômica Federal</string>
    <string name="chave_pix_exemple">Pix: 123123123123</string>
    <string name="cpf_cnpj_exemple">CPF/CNPJ: 00.000.000-00</string>
    <string name="agencia_exemple">Agência: 1243</string>
    <string name="conta_exemple">Conta: 000002-3</string>
    <string name="crie_um_novo_caso">Crie um novo caso</string>
    <string name="t_tulo_do_caso">Título do caso</string>
    <string name="descri_o">Descrição</string>
    <string name="nome_do_animal">Nome do animal</string>
    <string name="valor_em_reais_r">Valor em Reais (R$)</string>
    <string name="pr_xima_etapa">Próxima etapa</string>
    <string name="esp_cie">Espécie</string>
    <string name="faixa_de_valor">Faixa de valor (R$)</string>
    <string name="sep">-</string>
    <string name="filtro_por_esp_cie">Filtro por espécie</string>
    <string name="h_0_doa_es_pendentes">Há 0 doações pendentes!</string>
    <string name="ver_mais">Ver Mais</string>
    <string name="editar">Editar</string>
    <string name="apagar">Apagar</string>
    <string name="ficamos_feliz_pela_sua_ajuda">Ficamos feliz pela sua ajuda</string>
    <string name="valor">Valor</string>
    <string name="confirmar">Confirmar</string>
</resources>