<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".view.Filter">
    <include
        layout="@layout/toolbar_default" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <AutoCompleteTextView
            android:id="@+id/acUF"
            style="@style/fildTextStyle"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_location"
            android:hint="@string/estado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/acMunicipio"
            style="@style/fildTextStyle"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_location"
            android:hint="@string/munic_pio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acUF" />

        <AutoCompleteTextView
            android:id="@+id/acOng"
            style="@style/fildTextStyle"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:hint="Nome Ong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acMunicipio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="Espécie"
            android:textColor="#716F89"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEspCao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/icone_dog1"
            android:elevation="5dp"
            android:onClick="selectEspecie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEspGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:background="@drawable/icone_cat1"
            android:elevation="5dp"
            android:onClick="selectEspecie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEspCoelho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:background="@drawable/icone_bunny1"
            android:elevation="5dp"
            android:onClick="selectEspecie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="188dp"
            android:text="Faixa de valor"
            android:textColor="#716F89"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etValorMin"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/style_edit"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/minimo"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColorHint="#716F89"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.23" />

        <TextView
            android:id="@+id/tvSeparacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:elevation="5dp"
            android:text="-"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/etValorMax"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/etValorMin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.759" />

        <EditText
            android:id="@+id/etValorMax"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:background="@drawable/style_edit"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/m_ximo"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColorHint="#716F89"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.768" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/localiza_o"
            android:textColor="#716F89"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etValorMin"
            app:layout_constraintVertical_bias="0.694" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/bFiltrar"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="2dp"
        android:background="@drawable/style_button"
        android:onClick="filtrar"
        android:text="@string/filtrar"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>